--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Saakshi Mehendi Creation</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <div class="page">
+        <header>
+        <nav>
+            <ul>
+                <a href="#">HOME</a>
+                <a href="#">CONTACT</a>
+                <a href="#">EXPLORE</a>
+            </ul>
+        </nav>
+    </header>
 
+    </div>
+
+    <main>
+        <div>
+            <h1>Saakshi Mehendi Creation</h1>
+        </div>
+        <div>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. At repellendus molestias quae esse architecto iste, cum optio quis, consequuntur perferendis odio. Aut nobis culpa alias ipsam adipisci dolor numquam distinctio.</p>
+        </div>
+        <div>
+            <button>
+                <img src="#" alt="the corousal">
+            </button>
+        </div>
+    </main>
+    <footer>
+        <div class="social-links">
+            <a href="" target="_blank">
+                <img src="#" alt="instagram">
+            </a>
+            <a href="#" target="_blank">
+                <img src="#" alt="WhatsApp">
+            </a>
+        </div>
+        <p class="footer-text">© 2025 Saakshi Mehendi Creation | All Right Reserved</p>
+    </footer>
+    <script>
+
+    </script>
+</body>
+</html>
